# python_ai_2

./: .gitignore  README.md  pyproject.toml  requirements.txt
1021209_lesson17/: lesson17_3.ipynb  lesson17_6(標準差).ipynb
1041118_lesson11/: lesson11.ipynb
1041120_lesson12/: lesson12_1.ipynb  lesson12_2(數據圖表化).ipynb  requirements.txt
1041125_lesson13/: lesson13_1.ipynb
1041125_lesson13(加入中文字型)/: lesson13_1.ipynb
1041127_lesson14/: lesson14_1.ipynb
1041202_lesson15/: lesson15_1(tuple、numpy).ipynb  lesson15_3.ipynb  lesson15_4.ipynb  lesson15_6.ipynb
1041204_lesson16/: lesson16_1.ipynb  lesson16_2(pandas).ipynb  lesson16_3(pandas).ipynb  lesson16_4(布林遮罩).ipynb  lesson16_5.ipynb  各鄉鎮市區人口密度_清理後.csv
1041211_lesson18/: lesson18_3.ipynb
1041216_lesson19/: lesson19_1.ipynb  lesson19_2.ipynb  lesson19_3.ipynb  main.py  基隆車站每日進出站人數.xlsx
1041218_lesson20/: lesson20_1(groupby).ipynb  lesson20_3(apply).ipynb  lesson20_4.ipynb
1141127_lesson14/: lesson14_2numpy.ipynb  lesson14_3numpy.ipynb  lesson14_4條狀圖.ipynb
1141202_lesson15/: lesson15_2.ipynb  lesson15_5.ipynb  lesson15_7.ipynb
1141204_lesson16/: 各鄉鎮市區人口密度_清理後.xlsx
1141209_lesson17/: lesson17_1.ipynb  lesson17_2.ipynb  lesson17_4.ipynb  lesson17_5.ipynb
1141211_lesson18/: lesson18_1(抓取資料).ipynb  lesson18_2(抓取資料管理).ipynb  lesson18_3(路徑教學).ipynb  lesson18_4(結構化路徑、合併檔案).ipynb
1141216_lesson19/: lesson19_4.ipynb
1141218_lesson20/: index.py  lesson20_1(groupby).ipynb  lesson20_2.ipynb  tools.py
1141223_lesson21/: first.py  lesson21_1.ipynb  requirements.txt
1141223、25_lesson21/: lesson21_1.ipynb  (+1 more)
