[project]
name = "python-ai-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "google-genai>=1.56.0",
    "gunicorn>=23.0.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "line-bot-sdk>=3.21.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "wget>=3.2",
    "yfinance>=0.2.66",
]
